# ARGOS

./: .gitignore  Dockerfile  README.md  config.example.yaml  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
argos/: __init__.py  __main__.py  config.py  inspector.py  poseidon_bridge.py  report.py  syniz_client.py
argos/vision/: __init__.py  classifier.py  detector.py
tests/: test_detector.py  test_poseidon_bridge.py  test_report.py
